--- a/api/pom.xml
+++ b/api/pom.xml
@@ -13,16 +13,39 @@
 
 
     <dependencies>
+        <!-- jersey -->
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet</artifactId>
             <version>${jersey.version}</version>
         </dependency>
 
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <!-- /Spring Security -->
+
+        <!-- Project Service -->
         <dependency>
             <groupId>org.proffart</groupId>
-            <artifactId>med-docs-services</artifactId>
+            <artifactId>med-docs-service</artifactId>
             <version>${project.version}</version>
         </dependency>
+
     </dependencies>
 </project>
