--- a/api/src/webapp/WEB-INF/web.xml
+++ b/api/src/webapp/WEB-INF/web.xml
@@ -24,6 +24,15 @@
         <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
 
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <!--<context-param>
         <param-name>javax.faces.CONFIG_FILES</param-name>
         <param-value>/applicationContext-api.xml</param-value>
