--- a/model/pom.xml
+++ b/model/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>med-docs-models</artifactId>
+    <artifactId>med-docs-model</artifactId>
 
 
     <dependencies>
