--- a/service/pom.xml
+++ b/service/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>med-docs-services</artifactId>
+    <artifactId>med-docs-service</artifactId>
 
     <dependencies>
         <!-- MedDocs DAO -->
